--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ p {
   -webkit-appearance: none;
   width: 20px;
   height: 20px;
-  background-color: #e856dc;
+  background-color: #db8779;
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
