slide me text for slider

--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ p {
   cursor: pointer;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
 }
-
+.slide-text {
+  font-size: 2em;
+}
 .color-container {
   width: 80%;
   margin: auto;
