--- a/style.css
+++ b/style.css
@@ -3,21 +3,22 @@ body {
   font-family: 'Comfortaa', cursive;
   color: #a6ba9e;
   margin: 0;
-  display: flex; /* use flexbox to center the content vertically */
+  display: flex;
+  flex-direction: column; /* changed from row to column */
   align-items: center;
   justify-content: center;
-  height: 100vh; /* set the height of the body to 100% of the viewport height */
+  height: 100vh;
 }
 
 h1 {
-  color: #e856dc; /* set the color of the h1 element to #e856dc */
+  color: #e856dc;
   font-size: 2em;
   margin-bottom: 10px;
   padding-left: 20px;
 }
 
 p {
-  color: #a6ba9e; /* set the color of the p element to #a6ba9e */
+  color: #a6ba9e;
   font-size: 3em;
   margin-top: 0;
   padding-left: 20px;
@@ -53,40 +54,15 @@ p {
   cursor: pointer;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
 }
-.slide-text {
-  font-size: 2em;
-}
-.color-container {
-  width: 80%;
-  margin: auto;
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
-}
 
-.color-container label {
-  margin-right: 10px;
-}
-
-.color-container input[type="text"] {
-  width: 80px;
-  height: 30px;
-  border-radius: 5px;
-  border: none;
-  padding: 5px;
-  margin-right: 10px;
-}
-
-.color-container input[type="button"] {
-  width: 100px;
-  height: 40px;
-  background-color: #a6ba9e;
-  border-radius: 5px;
-  border: none;
-  color: white;
+.slider-text {
   font-size: 1em;
-  cursor: pointer;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+}
+
+
+img {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  max-width: 100px;
 }
